--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@import-normalize; /* bring in normalize.css styles */
+
+* {
+  box-sizing: border-box;
+}
