--- a/src/resume/initialStyles.css
+++ b/src/resume/initialStyles.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  line-height: 1.28rem;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
@@ -8,10 +13,6 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 h1 {
