--- a/src/resume/initialStyles.css
+++ b/src/resume/initialStyles.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  line-height: 1.28rem;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
@@ -10,8 +15,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-* {
-  box-sizing: border-box;
+h1 {
+  font-size: 2em;
+  margin: 0;
+}
+
+h2 {
+  font-size: 1.5em;
+  margin: 0;
 }
 
 h1 {
