--- a/src/resume/static/initialStyles.css
+++ b/src/resume/static/initialStyles.css
@@ -1,12 +1,17 @@
 * {
   box-sizing: border-box;
-  line-height: 1.28rem;
+}
+
+:root {
+  font-size: 10px;
 }
 
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
+  line-height: 1.4em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -17,20 +22,19 @@ code {
 
 h1 {
   font-size: 2em;
+  line-height: 1em;
   margin: 0;
 }
 
 h2 {
   font-size: 1.5em;
+  line-height: 1em;
   margin: 0;
 }
 
-h1 {
-  font-size: 2em;
-  margin: 0;
-}
-
-h2 {
-  font-size: 1.5em;
+button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
   margin: 0;
 }
